--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -6,7 +6,6 @@
   - [70. 爬楼梯问题](#70-爬楼梯问题)
   - [746. 使用最小花费爬楼梯](#746-使用最小花费爬楼梯)
   - [补充问题： 圆环回原点问题](#补充问题-圆环回原点问题)
-  - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
 - [子序和问题](#子序和问题)
   - [53. 最大子序和 *](#53-最大子序和-)
   - [面试题 17.24. 最大子矩阵*](#面试题-1724-最大子矩阵)
@@ -30,6 +29,7 @@
 - [背包问题系列](#背包问题系列)
   - [416. 分割等和子集](#416-分割等和子集)
   - [1049. 最后一块石头的重量II](#1049-最后一块石头的重量ii)
+  - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
 - [Others](#others)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
@@ -52,7 +52,8 @@
   - [343. 整数拆分](#343-整数拆分)
   - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
   - [887. 鸡蛋掉落 [面试**]](#887-鸡蛋掉落-面试)
-    - [1235. 规划兼职工作](#1235-规划兼职工作)
+  - [1235. 规划兼职工作 [Huawei]](#1235-规划兼职工作-huawei)
+  - [5815. 扣分后的最大得分](#5815-扣分后的最大得分)
 
 ## 基础问题
 ### 0-1背包问题
@@ -255,7 +256,7 @@ public:
 int backToOrigin(int n, int length) {
     vector<vector<int>> dp(n, vector<int>(length));
     dp[0][0] = 1;
-    for (int i = 0; i < n; i++) {
+    for (int i = 1; i < n; i++) {
         for (int j = 0; j < length; j++) {
             dp[i][j] = dp[i-1][(j-1+length)%length] + dp[i-1][(j+1)%length];
         }
@@ -264,152 +265,6 @@ int backToOrigin(int n, int length) {
 }
 ```
 
-
-### 494. 目标和 target sum [Medium]
-- 给定序列，计算仅利用+ -运算组合可以得到的目标值的组合数量
-- DFS搜索所有可能组合，是最为暴力的解题方法
-  - 时间复杂度： O(2^N),N为数组的长度，即组合的数量； 空间复杂度O(N)
-
-```c++
-class Solution {
-public:
-    int count = 0;
-    void dfs(vector<int>& nums, int S, int cur, int i) {
-        if (i == nums.size()) {
-            if (cur == S)
-            count++;
-        }
-        else 
-        {
-            dfs(nums, S, cur + nums[i], i+1);
-            dfs(nums, S, cur - nums[i], i+1);
-        }
-    }
-    int findTargetSumWays(vector<int>& nums, int S) {
-        dfs(nums, S, 0, 0);
-        return count;
-    }
-};
-```
-- 其他方法： 利用动态规划方法，大幅减少搜索空间
-  - `dp[i][j]`**定义i个数构成目标值j的组合数量** (与01背包问题相似)
-  - 状态转移方程：`dp[i][j] = dp[i-1][j-nums[i]] + dp[i-1][j+nums[i]]`
-    - 初始化比较复杂： 由于j- nums[i]可能出现负值，因此需要将遍历空间调大： 增大到`[0,2*sum+1)`的范围；
-    - 同时**初始化最开始的元素取值**：
-      - `dp[0][nums[0]+sum]=1 dp[0][sum -nums[0]]=1`
-      - 还要考虑当`nums[0]=0`的特殊情况，`dp[0][sum]=2`
-    - 时间复杂度： O(N^2), 空间复杂度O(N*max(sum)) N为数组长度
-
-```c++
-class Solution {
-public:
-    int findTargetSumWays(vector<int>& nums, int S) {
-        vector<vector<int> > dp;
-        int sum = 0;
-        for (auto i: nums) {
-            sum += i;
-        }
-        if (sum < S)
-            return 0;
-        for (int i = 0; i < nums.size(); i++) {
-            vector<int> tmp;
-            tmp.assign(2*sum + 1, 0);
-            dp.push_back(tmp);
-        }
-        int t = 2*sum + 1;
-        if (nums[0] == 0) {
-            dp[0][sum] = 2;
-        }
-        else {
-            dp[0][nums[0] + sum] = 1; // init 
-            dp[0][sum - nums[0]] = 1; // init
-        }
-        //cout << t << endl;
-        for (int i = 1; i < nums.size(); i++) {
-            for (int j = 0; j < t; j++ ) {
-                int l = j - nums[i] < 0 ? 0 : j - nums[i];
-                int r = j + nums[i] >= t ? 0 : j + nums[i];
-                //cout << l << r << endl;
-                dp[i][j] = dp[i - 1][l] + dp[i - 1][r];
-            }
-        }
-        return dp[nums.size() - 1][S + sum];
-    }
-};
-```
-- 在上面的基础上，可以对dp数组进行优化，仅利用两个一维数组进行存储。大幅降低空间复杂度
-  - 由于上面的转移方程中仅涉及相邻状态的转换，因此可以利用两个数组进行相对更新存储，在动态规划中十分常见
-```c++
-class Solution {
-public:
-    int findTargetSumWays(vector<int>& nums, int S) {
-        vector<vector<int> > dp;
-        int sum = 0;
-        for (auto i: nums) {
-            sum += i;
-        }
-        if (sum < S)
-            return 0;
-        
-        vector<int> prev;
-        prev.assign(2*sum + 1, 0);
-        vector<int> next;
-        next.assign(2*sum + 1, 0);
-        int t = 2*sum + 1;
-        if (nums[0] == 0) {
-            prev[sum] = 2;
-        }
-        else {
-            prev[nums[0] + sum] = 1; // init 
-            prev[sum - nums[0]] = 1; // init
-        }
-        for (int i = 1; i < nums.size(); i++) {
-            for (int j = 0; j < t; j++ ) {
-                int l = j - nums[i] < 0 ? 0 : j - nums[i];
-                int r = j + nums[i] >= t ? 0 : j + nums[i];
-                next[j] = prev[l] + prev[r];
-            }
-            prev = next;
-        }
-        return prev[S + sum];
-    }
-};
-```
-
-- **更优雅的解法**
-  - 将数组进行转换， 将计算目标转换为 `(target + sum) / 2`, 只用考虑加法运算即可
-    - 定义数组元素之和为`Sum`， 构成S的方程中，加法部分的结果为X, 那么被减的数之和为`sum-x`: X- (sum - x) = S; 即`X = (target + sum) / 2`
-    - $a_1 + a_2 - (a_3 + a_4) =sum$
-    - 那么X**即为01背包问题中背包的总重量**
-  - 本质仍然是 0/1背包问题
-  - 定义当前值的组合数 `dp[j]`  转换方程为：`dp[j] += (dp[j-nums[i]])`
-    - 二维形式为： 描述前i个元素构成目标和为j的个数`dp[i][j] = dp[i-1][j] + dp[i-1][j-nums[i]]`
-    - 形式比标准01背包问题更简单
-  - 注意遍历顺序
-- 关键点: **问题转换**  **1d01背包问题**
-```c++
-class Solution {
-public:
-    int findTargetSumWays(vector<int>& nums, int target) {
-        int sum = 0;
-        for (int num : nums){
-            sum +=  num;
-        }
-        if((sum + target) % 2 != 0 || sum < target) return 0;
-        int n = nums.size();
-        target = (sum + target) / 2;
-        vector<int>dp(target + 1, 0);
-        dp[0] = 1;
-        
-        for (int i = 0; i < n; i++){
-            for(int j = target; j >= nums[i]; j--){ //从target 倒推
-                 dp[j] += dp[j - nums[i]];
-            }
-        }
-        return dp[target];
-    }
-};
-```
 
 ## 子序和问题
 ### 53. 最大子序和 *
@@ -624,7 +479,7 @@ public:
   - 考虑 第一次买和第一次卖的情况
   - 等价于寻找最小值及对应的最大差值
   
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
@@ -672,7 +527,7 @@ public:
 
 - 通用模板解法
 
-```
+```c++
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
@@ -1267,6 +1122,154 @@ public:
     }
 };
 ```
+
+
+### 494. 目标和 target sum [Medium]
+- 给定序列，计算仅利用+ -运算组合可以得到的目标值的组合数量
+- DFS搜索所有可能组合，是最为暴力的解题方法
+  - 时间复杂度： O(2^N),N为数组的长度，即组合的数量； 空间复杂度O(N)
+
+```c++
+class Solution {
+public:
+    int count = 0;
+    void dfs(vector<int>& nums, int S, int cur, int i) {
+        if (i == nums.size()) {
+            if (cur == S)
+            count++;
+        }
+        else 
+        {
+            dfs(nums, S, cur + nums[i], i+1);
+            dfs(nums, S, cur - nums[i], i+1);
+        }
+    }
+    int findTargetSumWays(vector<int>& nums, int S) {
+        dfs(nums, S, 0, 0);
+        return count;
+    }
+};
+```
+- 其他方法： 利用动态规划方法，大幅减少搜索空间
+  - `dp[i][j]`**定义i个数构成目标值j的组合数量** (与01背包问题相似)
+  - 状态转移方程：`dp[i][j] = dp[i-1][j-nums[i]] + dp[i-1][j+nums[i]]`
+    - 初始化比较复杂： 由于j- nums[i]可能出现负值，因此需要将遍历空间调大： 增大到`[0,2*sum+1)`的范围；
+    - 同时**初始化最开始的元素取值**：
+      - `dp[0][nums[0]+sum]=1 dp[0][sum -nums[0]]=1`
+      - 还要考虑当`nums[0]=0`的特殊情况，`dp[0][sum]=2`
+    - 时间复杂度： O(N^2), 空间复杂度O(N*max(sum)) N为数组长度
+
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int S) {
+        vector<vector<int> > dp;
+        int sum = 0;
+        for (auto i: nums) {
+            sum += i;
+        }
+        if (sum < S)
+            return 0;
+        for (int i = 0; i < nums.size(); i++) {
+            vector<int> tmp;
+            tmp.assign(2*sum + 1, 0);
+            dp.push_back(tmp);
+        }
+        int t = 2*sum + 1;
+        if (nums[0] == 0) {
+            dp[0][sum] = 2;
+        }
+        else {
+            dp[0][nums[0] + sum] = 1; // init 
+            dp[0][sum - nums[0]] = 1; // init
+        }
+        //cout << t << endl;
+        for (int i = 1; i < nums.size(); i++) {
+            for (int j = 0; j < t; j++ ) {
+                int l = j - nums[i] < 0 ? 0 : j - nums[i];
+                int r = j + nums[i] >= t ? 0 : j + nums[i];
+                //cout << l << r << endl;
+                dp[i][j] = dp[i - 1][l] + dp[i - 1][r];
+            }
+        }
+        return dp[nums.size() - 1][S + sum];
+    }
+};
+```
+- 在上面的基础上，可以对dp数组进行优化，仅利用两个一维数组进行存储。大幅降低空间复杂度
+  - 由于上面的转移方程中仅涉及相邻状态的转换，因此可以利用两个数组进行相对更新存储，在动态规划中十分常见
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int S) {
+        vector<vector<int> > dp;
+        int sum = 0;
+        for (auto i: nums) {
+            sum += i;
+        }
+        if (sum < S)
+            return 0;
+        
+        vector<int> prev;
+        prev.assign(2*sum + 1, 0);
+        vector<int> next;
+        next.assign(2*sum + 1, 0);
+        int t = 2*sum + 1;
+        if (nums[0] == 0) {
+            prev[sum] = 2;
+        }
+        else {
+            prev[nums[0] + sum] = 1; // init 
+            prev[sum - nums[0]] = 1; // init
+        }
+        for (int i = 1; i < nums.size(); i++) {
+            for (int j = 0; j < t; j++ ) {
+                int l = j - nums[i] < 0 ? 0 : j - nums[i];
+                int r = j + nums[i] >= t ? 0 : j + nums[i];
+                next[j] = prev[l] + prev[r];
+            }
+            prev = next;
+        }
+        return prev[S + sum];
+    }
+};
+```
+
+- **更优雅的解法**
+  - 将数组进行转换， 将计算目标转换为 `(target + sum) / 2`, 只用考虑加法运算即可
+    - 定义数组元素之和为`Sum`， 构成S的方程中，加法部分的结果为X, 那么被减的数之和为`sum-x`: X- (sum - x) = S; 即`X = (target + sum) / 2`
+    - $a_1 + a_2 - (a_3 + a_4) =sum$
+    - 那么X**即为01背包问题中背包的总重量**
+  - 本质仍然是 0/1背包问题
+  - 定义当前值的组合数 `dp[j]`  转换方程为：`dp[j] += (dp[j-nums[i]])`
+    - 二维形式为： 描述前i个元素构成目标和为j的个数`dp[i][j] = dp[i-1][j] + dp[i-1][j-nums[i]]`
+    - 形式比标准01背包问题更简单
+  - 注意遍历顺序
+- 关键点: **问题转换**  **1d01背包问题**
+```c++
+class Solution {
+public:
+    int findTargetSumWays(vector<int>& nums, int target) {
+        int sum = 0;
+        for (int num : nums){
+            sum +=  num;
+        }
+        if((sum + target) % 2 != 0 || sum < target) return 0;
+        int n = nums.size();
+        target = (sum + target) / 2;
+        vector<int>dp(target + 1, 0);
+        dp[0] = 1;
+        
+        for (int i = 0; i < n; i++){
+            for(int j = target; j >= nums[i]; j--){ //从target 倒推
+                 dp[j] += dp[j - nums[i]];
+            }
+        }
+        return dp[target];
+    }
+};
+```
+
 
 ## Others
 
@@ -1924,7 +1927,7 @@ public:
 - 与[LC91.解码方法]是相似的，限制条件变少
 - **dp[i] 表示前i个字符可以构成的字符串数量**
 - 限制当前值要在10~25之间
-```
+```c++
 class Solution {
 public:
     int translateNum(int num) {
@@ -2014,7 +2017,7 @@ public:
 - `dp[i][j] = min(dp[i-1][j-1],dp[i-1][j]) + num[i][j]` 对边界的情况要特殊处理： `dp[i][0] = dp[i-1][0] + num[i][j] , dp[i][r]=dp[i-1][r] + num[i][j] `
 - 对只有一层的临界情况进行直接返回
 关键技巧： **`原位dp  空间压缩`**
-```
+```c++
 class Solution {
 public:
     int minimumTotal(vector<vector<int>>& triangle) {
@@ -2133,7 +2136,7 @@ public:
 
 - 基本做法： 动态规划：
   - dp[i] 定义正整数i的拆分最大乘积
-  - `dp[i] = max(dp[i], j*dp[j - i], j *(i - j))`
+  - `dp[i] = max(dp[i], j*dp[i - j], j *(i - j))`
 - 时间复杂度  O(N^2) 空间复杂度 O(N)
 - 关键点： **`dp公式`**  **`数学方法`**
 
@@ -2268,7 +2271,7 @@ public:
 所以答案是 14 次
 
 
-#### 1235. 规划兼职工作
+### 1235. 规划兼职工作 [Huawei]
 > n份兼职工作，每份工作预计从 startTime[i] 开始到 endTime[i] 结束，报酬为 profit[i]。
 给你一份兼职工作表，包含开始时间 startTime，结束时间 endTime 和预计报酬 profit 三个数组，**请你计算并返回可以获得的最大报酬**。
 时间上出现重叠的 2 份工作不能同时进行。
@@ -2334,6 +2337,56 @@ public:
             dp[i] = index < 0 ? max(dp[i-1], jobs[i].profit) : max(dp[i-1], dp[index] + jobs[i].profit);
         }
         return dp[n-1];
+    }
+};
+```
+
+### 5815. 扣分后的最大得分
+> m x n 的整数矩阵 points （下标从 0 开始）。一开始你的得分为 0 ，你想最大化从矩阵中得到的分数。
+每一行 中选取一个格子，选中坐标为 (r, c) 的格子会给你的总得分 增加 points[r][c]
+相邻行之间被选中的格子如果隔得太远，你会失去一些得分。对于相邻行 r 和 r + 1 （其中 0 <= r < m - 1），选中坐标为 (r, c1) 和 (r + 1, c2) 的格子，你的总得分 减少 abs(c1 - c2)
+
+- 动态规划解题：
+  - `dp[i][j] = max(dp[i - 1][k] + k) - j  + points[i][j] when k <= j `
+  - `dp[i][j] = max(dp[i - 1][k] - k + j)  + points[i][j] when k>j `
+- 算法思想不复杂，关键在于实现的时候如果高效实现，把复杂度降低到O(MN)
+  - 通过上面的公式，我们尝试在内层循环的时候，通过线性扫描，每次拿到左边的最大值，从而将O(k) -> O(1)
+```c++
+class Solution {
+public:
+    long long maxPoints(vector<vector<int>>& points) {
+        int n = points.size();
+        int m = points[0].size();
+        vector<vector<long long>> dp(n, vector<long long>(m));
+        for (int i = 0; i < n; i++) {
+            if (i == 0) {
+                for (int j = 0; j < m; j++) {
+                    dp[i][j] = points[i][j];
+                }
+            }
+            else {
+                // dp[i][j] = max(dp[i - 1][k] - j + k) + points[i][j] when k <= j 
+                //  max(dp[i - 1][k] - k + j) + points[i][j] when k > j
+                long long Max = 0;
+                // 技巧！！！
+                for (int j = 0; j < m; j++) {
+                    Max = Max - 1 < dp[i-1][j] ? dp[i-1][j] : Max - 1;
+                    dp[i][j] = Max + points[i][j];
+                }
+                Max = 0;
+                for (int j = m - 1; j >= 0; j--) {
+                    Max = Max - 1 < dp[i-1][j] ? dp[i-1][j] : Max - 1;
+                    dp[i][j] = dp[i][j] < Max + points[i][j] ? Max + points[i][j] : dp[i][j];
+                }
+            }
+        }
+        long long ans = 0;
+        for (int i = 0; i < m; i++) {
+            if (ans < dp[n-1][i]) {
+                ans = dp[n-1][i];
+            }
+        }
+        return ans;
     }
 };
 ```
