--- a/leetcode/排序与查找/二分查找.md
+++ b/leetcode/排序与查找/二分查找.md
@@ -21,6 +21,7 @@
   - [719. 寻找第k小的距离对 [KEY]](#719-寻找第k小的距离对-key)
   - [410. 分割数组的最大值 [KEY]](#410-分割数组的最大值-key)
   - [668. 乘法表中第k小数](#668-乘法表中第k小数)
+  - [1838. 最高频元素的频数](#1838-最高频元素的频数)
   - [补充题目： 木头切割问题 *](#补充题目-木头切割问题-)
   - [29. 两数相除 [Medium]](#29-两数相除-medium)
   - [852. 山脉数组的峰顶索引](#852-山脉数组的峰顶索引)
@@ -605,7 +606,6 @@ public:
         int left = 0;
         int right = nums.size()-1; 
         // 主要是用于解决当数组长度为1时的特殊情况
-
         while(left<right){
             int mid = left+(right-left)/2;
             // 需要对mid + 1 进行操作，因此<=的边界可能会存在溢出
@@ -690,7 +690,7 @@ public:
         while (true) {
             // 对达到边界的数组进行及时处理 返回
             if (index1 == m) {
-                return nums2[index2 + k - 1];
+                return nums2[index2 + k - 1]; // 还要考虑剩余的位置， 因此是index + k -1
             }
             if (index2 == n) {
                 return nums1[index1 + k - 1];
@@ -698,11 +698,13 @@ public:
             if (k == 1) {
                 return min(nums1[index1], nums2[index2]);
             }
+            // 注意是 index1 + k/2 -1 要有一个减一操作，这是因为要计算k/2个数字， index1本身位置也算， 所以要减去
             int newIndex1 = min(index1 + k / 2 - 1, m - 1); // 边界设置
             int newIndex2 = min(index2 + k / 2 - 1, n - 1);
+            
             if (nums1[newIndex1] <= nums2[newIndex2]) {
-                k -= newIndex1 - index1 + 1; //调整搜索空间
-                index1 = newIndex1 + 1;  //设置索引
+                k -= newIndex1 - index1 + 1; //调整搜索空间， 要减去已经排除的空间长度， newIndex1 - index1 + 1； 这个一加的很有灵性
+                index1 = newIndex1 + 1;  //设置索引 在原理的搜索空间的基础上要+1
             }
             else {
                 k -= newIndex2 - index2 + 1;
@@ -1344,6 +1346,60 @@ public:
     }
 };
 ```
+
+
+### 1838. 最高频元素的频数
+> 给你一个整数数组 nums 和一个整数 k 。在一步操作中，你可以选择 nums 的一个下标，并将该下标对应元素的值增加 1 。
+执行最多 k 次操作后，返回数组中最高频元素的 最大可能频数 。
+
+- 与切割木头、乘法表中第k个数等题做法相似
+- 是二分思想的拓展使用：
+- 先对数组进行排序，然后计算前缀和数组
+- 基于前缀和数值可以快速计算一个区间内的总和，并比较对应预期增值后的区间总和
+  - 计算得到所需的总操作次数
+  - 进而可以判断当前区间长度是不是一个合法的高频区间长度
+- 通过二分搜索，最长的区间长度： 范围为`[1,n]`
+- 时间复杂度 O(NlogN) 空间复杂度O(N)
+- 关键点： **`二分搜索`** **`前缀和`**
+```c++
+class Solution {
+public:
+    bool check(vector<long long>& sum, vector<int>& nums, int len, int k) {
+        //cout << len << " " << endl;
+        for (int i = 0; i <= nums.size() - len; i++) {
+            int cur = nums[i + len - 1];
+            long long csum = sum[i + len] - sum[i];
+            //cout << i + len - 1 << " : " << cur << " - " << csum << endl;
+            if ((long long) cur * len - csum <= k) {
+                return true;
+            }
+        }
+        return false;
+    }
+    int maxFrequency(vector<int>& nums, int k) {
+        sort(nums.begin(), nums.end());
+        vector<long long> sum;
+        long long pre = 0;
+        sum.push_back(pre);
+        for (auto p : nums) {
+            sum.push_back(pre + p);
+            pre = pre + p;
+        }
+        int left  = 1;
+        int right = nums.size();
+        while (left <= right) {
+            int mid = (left + right) >> 1;
+            if (check(sum, nums, mid, k)) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return right;
+    }
+};
+```
 ### 补充题目： 木头切割问题 *
 > 给定长度为n的数组，每个元素代表一个木头的长度，木头可以任意截断，从这堆木头中截出至少k个相同长度为m的木块。已知k，求max(m)。
 > 输入两行，第一行n, k，第二行为数组序列。输出最大值
@@ -1538,6 +1594,8 @@ public:
     }
 };
 ```
+
+
 
 ## 总结体会
 - 二分查找的应用思考：本质上需要在一定空间上按照某种依据进行答案搜索的情况，可以通过二分查找缩小搜索空间，严格依赖有序性。
