--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -1,10 +1,6 @@
 
 
 
-<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
-
-<!-- code_chunk_output -->
-
   - [前言](#前言)
 - [查找节点](#查找节点)
   - [2. 两数相加](#2-两数相加)
@@ -113,7 +109,7 @@ public:
 ```
 ### 369. 链表加一
 > 用一个 非空 单链表来表示一个非负整数，然后将这个整数加一。
-**高位在链表头部、低位在链表尾部 **
+**高位在链表头部、低位在链表尾部**
 
 - 基础做法： 链表反转后进行加一即可，最后再进行反转得到结果
   - 常规做法，考虑对链表操作的熟练程度
@@ -181,9 +177,6 @@ public:
             }
             head = head -> next;
         } 
-        if (p == nullptr && head != nullptr) {
-
-        }
         p -> val++;
         p = p -> next;
         while (p) {
@@ -403,7 +396,7 @@ public:
 
 - 判断链表是否有环
 1. **记录链表指针，使用哈希表存储，检查是否出现重复**； 时间复杂度O(n)； 空间复杂度 O(n)
-```/
+```c++
 class Solution {
 public:
     bool hasCycle(ListNode *head) {
@@ -419,10 +412,9 @@ public:
     }
 };
 ```
-- 可以使用链表中经典的**快慢指针**,判断快指针是否出现从后追上慢指针的情况，即出现环链；
+- 可以使用链表中经典的**快慢指针**, 判断快指针是否出现从后追上慢指针的情况，即出现环链；
     时间复杂度为O(n)，空间复杂度为O(1)
-
-```
+```c++
 class Solution {
 public:
     bool hasCycle(ListNode *head) {
@@ -565,12 +557,12 @@ public:
 ```
 ### 876. 链表的中间节点
 > 给定一个头结点为 head 的非空单链表，返回链表的中间结点。
-如果有两个中间结点，则返回第二个中间结点。
+如果有两个中间结点，则返回**第二个中间结点**。
 
 - **`快慢指针法`**，一点就到家 boom
 - 后面常用哦！！！
 
-```
+```c++
 class Solution {
 public:
     ListNode* middleNode(ListNode* head) {
@@ -646,7 +638,7 @@ public:
     - `p2 -> next = p1 -> next` `p2 = p2 -> next`
 - 时间复杂度 O(N) 空间复杂度 O(1)
 - 关键点： **`双指针 奇指针 偶指针`** 
-```
+```c++
 class Solution {
 public:
     ListNode* oddEvenList(ListNode* head) {
@@ -675,7 +667,7 @@ public:
 - 快慢指针法，由于n从1开始编号，**可以先找到倒数第n+1个节点，即fast指针多走n步即可**  1 2 3 4 5 当fast多走一步时，slow指向的即为倒数第2个节点；同理指向倒数（x+1）节点
 - 之后快慢指针共同移动直到到尾部，这个时候可以将slow后面的节点删掉
 - **临界情况： 当链表长度小于n时，需要删除头节点，进行判断**
-```
+```c++
 class Solution {
 public:
     ListNode* removeNthFromEnd(ListNode* head, int n) {
@@ -708,7 +700,7 @@ public:
 ```
 
 - 代码简化: **加上dummy-node之后，代码逻辑有明显的简化**
-```
+```c++
 class Solution {
 public:
     ListNode* removeNthFromEnd(ListNode* head, int n) {
@@ -803,7 +795,6 @@ public:
             // 跳过重复段
             while (cur -> next != nullptr && cur -> val == cur -> next -> val) {
                 cur = cur -> next;
-                
             }
             // 当前后相连的时候，说明没有重复，正常移动
             if (prev -> next == cur) {
@@ -895,7 +886,7 @@ public:
 - 简单题目： 只给定待删的节点，不给链表的头节点，链表的基本操作
 - 通过与待删节点的下个节点进行交换即可，
   - 将下一个节点的值复制到当前节点，然后删除下一个节点
-```
+```c++
 class Solution {
 public:
     void deleteNode(ListNode* node) {
@@ -905,7 +896,6 @@ public:
             node->next=next->next;
             delete next;// 释放节点
         }
-
     }
 };
 ```
@@ -1035,7 +1025,7 @@ public:
   - 仍然将问题简化为两步： 给定head，对于head->next后的N-1个元素，通过reverseN(head->next,N-1); 
   - 完成反转后，将head和head->next进行反转，并将head的next指向原来链表中的第N+1个元素
   - 这个N+1元素需要在递归中提前记录，并将其作为递归终止的条件。
-```
+```c++
 class Solution {
 public:
     ListNode * successor=NULL;
@@ -1058,7 +1048,7 @@ public:
   - head->next=reverse(head->next,m-1,n-1): 直观看就是在链表遍历，m-1和n-1即保证反转的相对位置不变；
   - 对于reverse中m==1 表明已经到达待翻转位置：
 
-```
+```c++
 class Solution {
 public:
     ListNode* successor = nullptr;
@@ -1131,7 +1121,7 @@ public:
   - **每次遍历到一组的尾部节点后进行反转操作**
   - 然后执行递归K个元素反转
   - 时间复杂度 O(N) 空间复杂度 O（1）
-```
+```c++
 class Solution {
 public:
     ListNode* reverseKGroup(ListNode* head, int k) {
@@ -1267,7 +1257,7 @@ public:
     - 直接套用mergeSort的框架，在合并的时候换成合并两个有序链表的逻辑函数
     - 时间复杂度： O(kn * logK) 空间复杂度O(logK)
     - K： 链表数量  n即链表的长度
-```
+```c++
 class Solution {
 public:
     ListNode* mergeTwoLists(ListNode* a, ListNode* b) {
@@ -1319,7 +1309,7 @@ public:
 - 将两个部分使用链表存储，然后进行拼接即可
 - 为了操作简便，可以使用dummy node节点进辅助处理
 - 关键点： **`dummy node`**   **`双指针`**
-```
+```c++
 class Solution {
 public:
     ListNode* partition(ListNode* head, int x) {
@@ -1553,7 +1543,7 @@ public:
 
     int capacity = 0;
     int size = 0;
-    DLinkNode* head;
+    DLinkNode* head; // 为指示指针 guard指针
     DLinkNode* tail;
     unordered_map<int, DLinkNode*> kv;
     LRUCache(int _capacity) {
