--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -1,5 +1,6 @@
 - [单调栈技巧](#单调栈技巧)
-  - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
+  - [739. 每日温度 [Medium]](#739-每日温度-medium)
+  - [42. 接雨水 [Hard] :m :](#42-接雨水-hard-m-)
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [85. 最大矩形](#85-最大矩形)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
@@ -24,6 +25,7 @@
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
   - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
+  - [727. 最小窗口子序列 [最小覆盖子序列]](#727-最小窗口子序列-最小覆盖子序列)
   - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
   - [209. 长度最小的子数组](#209-长度最小的子数组)
   - [862. 和至少为 K 的最短子数组 [Hard]](#862-和至少为-k-的最短子数组-hard)
@@ -36,8 +38,57 @@
 
 ## 单调栈技巧
 
-### 42. 接雨水 [Hard] [*]
-- 当前位置的盛水量取决于左侧/右侧相对最高位置的比较情况
+- 单调栈 https://blog.csdn.net/lucky52529/article/details/89155694
+- 从栈底到栈顶数据单调递增或递减。
+- 逻辑模板：以单调递减栈为例
+```c++
+stack<int> st
+for (visit list) {
+    if (st空 ｜｜st.top >= 当前元素) 
+        入栈
+    else
+        while (st不空 && st.top < 当前元素) 
+        {
+            出栈；
+            update res;
+        }
+        当前数据入栈
+}
+```
+- 直接套用单调栈模板得到结果
+- 在实际答题中，需要能够发现单调栈的使用情况：
+  - **要寻找任一个元素的右边或者左边第一个比自己大或者小的元素的位置**
+### 739. 每日温度 [Medium]
+> 根据每日 气温 列表 temperatures ，请计算在每一天需要等几天才会有更高的温度。如果气温在这之后都不会升高，请在该位置用 0 来代替
+
+- 使用单调递减栈进行求解
+  - 递减栈： 当栈顶元素小于目标元素时，进行出栈， 
+  - 即**当发现有更高温度就进行出栈操作**，更新结果
+  - 栈内自底而上时降序排列
+- 时间复杂度 O(N)
+- 关键点： **`单调性设计 结果更新`**
+```c++
+class Solution {
+public:
+    vector<int> dailyTemperatures(vector<int>& temperatures) {
+        int n = temperatures.size();
+        vector<int> ans(n);
+        stack<int> st;
+        for (int i = 0; i < n; i++) {
+            while (!st.empty() && temperatures[st.top()]  < temperatures[i]) {
+                int cur = st.top();
+                st.pop();
+                ans[cur] = i - cur; 
+            }
+            st.push(i);
+        }
+        return ans;
+    }
+};
+```
+
+### 42. 接雨水 [Hard] :m :
+- 当前位置的盛水量取决于**左侧/右侧相对最高位置的比较情况**
 - 使用双指针法，每次更新左/右当前的最高位置，取最低位置计算结果
   - 本质上将，当前位置的接水量取决于当前位置左右的最高点
   - 双指针法简化了重复求每个位置左右最高点的计算过程
@@ -212,7 +263,7 @@ public:
 > 132 模式的子序列 由三个整数 nums[i]、nums[j] 和 nums[k] 组成，并同时满足：i < j < k 和 nums[i] < nums[k] < nums[j] , 判断序列中是否存在132模式
 
 - 主要寻找`nums[i] < nums[k] < nums[j]`
-- 依靠单调栈进行，**通过递增单调栈**，确定峰值`nums[k]`和`nums[j]`, 
+- 依靠单调栈进行，**通过单调递减栈**，确定峰值`nums[k]`和`nums[j]`, 
 - 在寻找`nums[i]`时判断其小于历史栈顶元素即可 (第二大数)
 - 上述遍历过程要通过逆序遍历实现，因为132，那么相对来说确定3和2后判断1比较容易。
 
@@ -346,14 +397,20 @@ public:
 };
 ```
 ### 496. 下一个更大元素 I
-> 两个 没有重复元素 的数组 nums1 和 nums2 ，其中nums1 是 nums2 的子集。
+> 两个 **没有重复元素** 的数组 nums1 和 nums2 ，其中nums1 是 nums2 的子集。
 请你找出 nums1 中每个元素在 nums2 中的下一个比其大的值。
 nums1 中数字 x 的下一个更大元素是指 x 在 nums2 中对应位置的右边的第一个比 x 大的元素。如果不存在，对应位置输出 -1
-
+```
+输入: nums1 = [4,1,2], nums2 = [1,3,4,2].
+输出: [-1,3,-1]
+nums1和nums2中所有整数 互不相同
+nums1 中的所有整数同样出现在 nums2 中
+```
 
 - next greater 问题
 - **一般使用单调栈进行解决** [LC739.每日温度]解题一致
-  - 从栈底到栈顶单调递减**单调递减栈**；单调栈保存数组索引，当遇到比当前栈顶元素大的值时进行出栈操作，并更新结果
+  - 从栈底到栈顶单调递减**单调递减栈**；
+    - 单调栈保存数组索引，当**遇到比当前栈顶元素大的值时进行出栈操作**，并更新结果
   - 本题涉及两个数组，需要使用哈希表来进行一个结果索引的映射
 - 时间复杂度  O(N) 空间复杂度 O(N)
 
@@ -375,6 +432,7 @@ public:
                     int index = map1[nums2[st.top()]];
                     res[index] = nums2[i];
                 }
+                // 注意pop的位置 不管是否要更新结果，当出现递增的情况都要进行pop
                 st.pop();
             }
             st.push(i);
@@ -720,7 +778,7 @@ public:
     - `f(n,m)=[(m-1)%n+x+1]%n`
     - 化简后： `f(n,m) = [m + x] % n`  `x = f(n-1, m)` 构成递推公式
 
-```
+```c++
 class Solution {
 public:
     int lastRemaining(int n, int m) {
@@ -1048,9 +1106,9 @@ public:
 
 - 两个字符串的对比和搜索，典型的滑窗题目，设置滑窗在s中搜索符合t的区间，更新滑窗的过程并更新结果
   1. 使用哈希表存储当前滑窗数据和子串t的元素分布
-  2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
+  2. `[left, right)`滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
   3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
-  4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
+  4. 当`valid==need.size` 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
     - 移动后，有很多细节需要注意：一个是valid的更新，一个是window数据的更新，仅当左指针的元素是need中元素时才进行上面的更新处理
 - 时间复杂度 O(N)
 
@@ -1107,6 +1165,56 @@ public:
 };
 ```
 
+### 727. 最小窗口子序列 [最小覆盖子序列]
+> 给定字符串 S and T，找出 S 中最短的（连续）子串 W ，使得 T 是 W 的 子序列。如果 S 中没有窗口可以包含 T 中的所有字符，返回空字符串 ""。如果有不止一个最短长度的窗口，返回开始位置最靠左的那个。
+
+```
+输入：
+S = "abcdebdde", T = "bde"
+输出："bcde"
+解释：
+"bcde" 是答案，因为它在相同长度的字符串 "bdde" 出现之前。
+"deb" 不是一个更短的答案，因为在窗口中必须按顺序出现 T 中的元素。
+```
+
+- 与[LC.76最小覆盖子串]相比，本题加上了对序列性的要求，要求还要保存元素的序列性
+- 还是用滑动窗口解题， 当搜索到窗口满足当前target串时进行处理即可
+
+```c++
+string minWindow(string s1, string s2) {
+        int i = 0;
+        int j = 0;
+        int left = -1;
+        int right;
+        int minLen = INT_MAX;
+        while (i < s1.size()) {
+            if (s1[i] == s2[j]) {
+                j++; // 移动目标串的指针
+                // 当前窗口已匹配时，进行左边界收缩
+                if (j == s2.size()) {
+                    right = i + 1;
+                    j--; // 先减一， 避免访问越界
+                    // 左边界收缩，  采用逆序的方式实现，找到最右的左位置
+                    while (j >= 0) {
+                        while (s1[i] != s2[j]) {
+                            i--; // 对于不相等的位置要向前跳过
+                        }
+                        i--;
+                        j--;
+                    }
+                    i++;
+                    j++; // 前面已经减到了负数了， 所以要将j回归到0
+                    if (right - i < minLen) {
+                        minLen = right - i; // 更新结果
+                        left = i;
+                    }
+                }
+            }
+            i++;
+        }
+        return left == -1 ? "" : s1.substr(left, minLen);
+    }
+```
 
 ### 补充题：最多覆盖点问题 [百度/美团 *]
 
@@ -1143,6 +1251,9 @@ int maxPoints(vector<int>& nums, int len) {
 
 
 ### 209. 长度最小的子数组
+> 给定一个含有 n 个**正整数**的数组和一个正整数 target 。
+找出该数组中满足其和 ≥ target 的长度最小的 连续子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，并返回其长度。如果不存在符合条件的子数组，返回 0 。
+
 - 计算**数组中和大于目标值的最小长度的连续子数组**
   - **全为正整数**
 - 做法一： 前缀和 + 二分搜索
@@ -1262,12 +1373,13 @@ public:
 
 
 - **双向队列解题**
-  - deque<int>window，用于存储下标。这个变量有以下特点:
+  - `deque<int>window`，用于存储下标。这个变量有以下特点:
   - 变量的最前端（也就是 window.front()）是**此次遍历的最大值的下标**
   - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
   - 双项队列中的所有值都要在窗口范围内
 - 关键逻辑： **元素入队操作和队列合法判断**  **双向队列 deque**
 - 时间复杂度 O(N) 空间复杂度O(k)
+- 关键点： **`单调队列思想`** **`双向队列利用`**
 ```c++
 class Solution {
 public:
@@ -1352,11 +1464,11 @@ public:
 ```
 
 - **动态规划**解法
-  - 定义`dp[i][j]` 表示A数组以i开始和B数组以j开始的子串的最大公共长度；
+  - 定义`dp[i][j]` 表**示A数组以i开始和B数组以j开始**的子串的最大公共长度；
   - dp[i][j] = dp[i+1][j+1] + 1 if dp[i] == dp[j]; otherwise dp[i][j] = 0;
   - 最终结果为dp数组中的最大值
 - 时间复杂度 `O(M*N)` 空间复杂度 `O(M*N)`
-```
+```c++
 class Solution {
 public:
     int findLength(vector<int>& A, vector<int>& B) {
@@ -1385,7 +1497,7 @@ public:
 ## 前缀和解题技巧
 
 ### 525. 连续数组
-> 给定一个二进制数组, 找到含有相同数量的 0 和 1 的最长连续子数组（的长度）
+> 给定一个二进制数组, 找到**含有相同数量的 0 和 1 的最长连续子数组**（的长度）
 
 ```
 输入: [0,1]
