--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -40,6 +40,7 @@
   - [350. 两个数组的交集II](#350-两个数组的交集ii)
   - [977. 有序数组的平方](#977-有序数组的平方)
   - [611. 有效三角形的个数](#611-有效三角形的个数)
+  - [1877. 数组中最大数对和的最小值](#1877-数组中最大数对和的最小值)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
   - [36. 有效的数独](#36-有效的数独)
@@ -53,6 +54,8 @@
   - [253. 会议室II](#253-会议室ii)
   - [1353. 最多可以参加的会议数目](#1353-最多可以参加的会议数目)
   - [补充. 替换字符串](#补充-替换字符串)
+- [贪心](#贪心)
+  - [补充. 跳一跳问题 [Tencent/ByteDance]](#补充-跳一跳问题-tencentbytedance)
 
 
 ## 遍历问题
@@ -1716,7 +1719,39 @@ public:
     }
 };
 ```
+### 1877. 数组中最大数对和的最小值
+> 一个数对 (a,b) 的 数对和 等于 a + b 。最大数对和 是一个数对数组中最大的 数对和 
+给你一个长度为 偶数 n 的数组 nums ，请你将 nums 中的元素分成 n / 2 个数对，使得：
+nums 中每个元素 恰好 在 一个 数对中，且
+最大数对和 的值 最小 。
+请你在最优数对划分的方案下，**返回最小的 最大数对和** 。
 
+```
+输入：nums = [3,5,2,3]
+输出：7
+解释：数组中的元素可以分为数对 (3,3) 和 (5,2) 。
+最大数对和为 max(3+3, 5+2) = max(6, 7) = 7 。
+```
+- 题目初看有点难，还在想要二分搜索么？
+- 再看感觉排序+双指针就能解决
+  - 尽量让“较小数”和“较大数”组成数对，可以有效避免出现“较大数成对”的现象」
+
+```c++
+class Solution {
+public:
+    int minPairSum(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        if (nums.size() == 2) return nums[0] + nums[1];
+        int left = 0;
+        int right = nums.size() - 1;
+        int ans = INT_MIN;
+        while (left < right) {
+            ans = max(ans, nums[left++] + nums[right--]);
+        }
+        return ans;
+    }
+};
+```
 ## 哈希表技巧
 ### 1. 两数之和
 给定数组和目标，找出数组两元素之和为target的元素索引
@@ -2271,3 +2306,14 @@ int main() {
     return 0;
 }
 ```
+
+## 贪心
+
+### 补充. 跳一跳问题 [Tencent/ByteDance]
+> 有n个格子，每个格子上有一 个蘑菇，蘑菇分为好蘑菇和毒蘑菇，好蘑菇增加体力值, 坏蘑菇减少体力值
+> 2、人的初始体力值为m
+> 人从格子外开始跳，每次跳消耗体力值为距离的平方
+> 问题1： 判断是否可以跳到终点？ 如果可以返回最大剩余体力值
+> 问题2： 返回跳到终点的路径
+> 输入： 初始体力值m和蘑菇值序列 arrays
+> case: array=[1, 2, -3, 4, 5, 6]  m = 5
