--- a/topics/T7-二叉搜索树.md
+++ b/topics/T7-二叉搜索树.md
@@ -1,4 +1,22 @@
-
+- [二叉搜索树](#二叉搜索树)
+    - [定义](#定义)
+    - [性质](#性质)
+  - [二叉搜索树遍历](#二叉搜索树遍历)
+    - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
+    - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [二叉搜索树性质的利用](#二叉搜索树性质的利用)
+    - [96. 不同的二叉搜索树](#96-不同的二叉搜索树)
+    - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
+    - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
+    - [235. 二叉搜索树的最近公共祖先](#235-二叉搜索树的最近公共祖先)
+    - [530. 二叉搜索树的最小绝对差](#530-二叉搜索树的最小绝对差)
+  - [二叉搜索树的构建](#二叉搜索树的构建)
+    - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
+    - [109. 有序链表转换为二叉搜索树](#109-有序链表转换为二叉搜索树)
+  - [二叉搜索树的增/删/改](#二叉搜索树的增删改)
+    - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
+    - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
+    - [99. 恢复二叉搜索树](#99-恢复二叉搜索树)
 
 # 二叉搜索树
 ### 定义
@@ -9,8 +27,8 @@
 - 它的左右子树也都是二叉排序树
 
 ### 性质
-- 若二叉搜索树为**平衡二叉树**， 
-- 若非平衡，查找效率可能退化为O(**高度为logN + 1, 查找效率为： O(logN)**N)
+- 若二叉搜索树为**平衡二叉树**，  **高度为logN + 1, 查找效率为： O(logN)**
+- 若非平衡，查找效率可能退化为O(N)
 - 空间复杂度: O(N)
 
 - 『借助二叉排序树进行搜索，**但因为所建立的树本身不一定是轴对称的，所以每次比较并不能确保减小一半范围**。』
