--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -33,7 +33,8 @@
   - [718. 最长重复子数组](#718-最长重复子数组)
 - [前缀和解题技巧](#前缀和解题技巧)
   - [525. 连续数组](#525-连续数组)
-  - [560. 和为K的子数组](#560-和为k的子数组)
+  - [560. 和为K的子数组 [美团]](#560-和为k的子数组-美团)
+  - [523. 连续的子数组和](#523-连续的子数组和)
 
 
 ## 单调栈技巧
@@ -1540,7 +1541,7 @@ public:
 
 
 
-### 560. 和为K的子数组
+### 560. 和为K的子数组 [美团]
 
 > 给定一个整数数组和一个整数 k，你需要找到该数组中和为 k 的连续的子数组的个数。
 
@@ -1573,6 +1574,49 @@ public:
             prefix[sum]++;
         }
         return ans;
+    }
+};
+```
+### 523. 连续的子数组和
+> 给你一个整数数组 nums 和一个整数 k ，编写一个函数来判断该数组是否含有同时满足下述条件的连续子数组：
+子数组大小 至少为 2 ，且
+子数组元素总和为 k 的倍数。
+如果存在，返回 true ；否则，返回 false 。
+0 始终视为 k 的一个倍数。
+
+- 连续子数组的和，这种描述下让人很容易想到前缀和
+- 利用前缀和数组进行组织，然后再进行搜索。
+- 本题是要寻找子数组和为k的倍数，那么效仿前面两题中使用哈希表的方式：
+  - 我们使用哈希表记录前缀和 % k 的余数，以及其对应的位置
+  - 需要注意的是： **当两个前缀和之差为k的倍数时，那么这个前缀和本身%k的余数应该相等**
+  - 在遍历中搜索是否有相同前缀和即可，然后进行结果更新；
+  - 需要注意的是：哈希表仅保存余数的首位置，在更新哈希表时要格外注意；
+
+- 与前面的01子串， 连续数组等题的做法十分相似。
+- 关键点： **`前缀和 + 哈希表`**
+```c++
+class Solution {
+public:
+    bool checkSubarraySum(vector<int>& nums, int k) {
+        int n = nums.size();
+        vector<int> preSum(n + 1);
+        int pre = 0;
+        preSum[0] = pre;
+        unordered_map<int, int> pos; 
+        pos[0] = -1; // 默认初始化； 前缀和的基础
+        for (int i = 0; i < n; i++) {
+            preSum[i+1] = pre + nums[i];
+            pre = preSum[i+1];
+            if (pos.find(pre % k) != pos.end()) {
+                if (i - pos[pre % k] >= 2)
+                    return true; 
+            }
+            else { // 只有不存在的时候才插入哈希表中
+                pos[pre % k] = i;
+            }
+           
+        }
+        return false;
     }
 };
 ```
