--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -56,6 +56,7 @@
   - [补充. 替换字符串](#补充-替换字符串)
 - [贪心](#贪心)
   - [补充. 跳一跳问题 [Tencent/ByteDance]](#补充-跳一跳问题-tencentbytedance)
+  - [补充. 跳一跳问题II [ByteDance]](#补充-跳一跳问题ii-bytedance)
 
 
 ## 遍历问题
@@ -2317,3 +2318,45 @@ int main() {
 > 问题2： 返回跳到终点的路径
 > 输入： 初始体力值m和蘑菇值序列 arrays
 > case: array=[1, 2, -3, 4, 5, 6]  m = 5
+
+`dp[i] = max(dp[j] - (i-j) * (i -j)) + array[i]`
+
+
+### 补充. 跳一跳问题II [ByteDance]
+
+> 一共n节台阶一次可以跳任意节，每跳一节**消耗一点体力**，起始体力为m，每节台阶上都有一个蘑菇，当跳到一节台阶上就会吃掉这个台阶上的蘑菇，蘑菇的效果可能是增加体力也可能是减少体力，由一个长度为n的数组array代表每一节上的蘑菇的效果（**正数为增加体力， 负数为减少体力**）求到达最后的台阶时的最大体力值为多少（如果无法到达最后一节则返回-1
+
+- 基于贪心思想即可完成：分析如下：
+  - 每次跳一节的体力消耗仅为1， 同样情况下往有正蘑菇的位置上跳收益肯定高于跳到负蘑菇上
+  - 因此可以制定贪心策略： 
+    - 每次往能跳到的下一个正蘑菇位置上跳，更新体力值和位置
+    - 当跳不动下一个正蘑菇时，往最远的位置上跳即可， 否则多跳一次就是浪费体力
+    - 最后判断最后一个位置上的体力值即可
+
+```c++
+int jump(int m, vector<int> array) {
+    int n = array.size();
+    int maxPosition = 0;
+    int pos = -1;
+    for (int i = 0; i < n; i++) {
+        if (m  < 0) return -1;
+        if (i <= pos) {
+            continue;
+        }
+        if (array[i] > 0 && m - (i - pos) >= 0) {
+            pos = i;
+            m -= (i - pos);
+            m += array[i];
+        }
+        else {
+            if (pos + m >= n - 1) {
+                return m - (n - 1 - pos) + array[n-1];
+            }
+            pos += m;
+            m = 0;
+            m += array[pos];
+        }
+    }
+    return m;
+}
+```
