--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -32,6 +32,7 @@
   - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
 - [Others](#others)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
+  - [44. 通配符匹配 [Hard]](#44-通配符匹配-hard)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
   - [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
   - [62. 不同路径 [Medium]](#62-不同路径-medium)
@@ -1286,7 +1287,11 @@ public:
 解释：因为 '*' 代表可以匹配零个或多个前面的那一个元素, 在这里前面的元素就是 'a'。因此，字符串 "aa" 可被视为 'a' 重复了一次
 ```
 
-
+- 注意`*`的作用： 匹配前一个元素n次 （`n>=0`）
+- 那么根据这个特点，可以分为三种匹配情况：对于当前位置为`*`:
+  - 通配符匹配s串**一个字符** `dp[i][j-1]`
+  - 匹配s串**0个字符** `dp[i][j-2]` 当p串的前一个字符和当前s串的字符不匹配时，需要把前一个字符给忽略掉，即匹配0次
+  - 匹配s串**多个字符**  `dp[i-1][j]`
 ```c++
 class Solution {
 public:
@@ -1324,6 +1329,59 @@ public:
 };
 ```
 
+
+### 44. 通配符匹配 [Hard] 
+> 给定一个字符串 (s) 和一个字符模式 (p) ，实现一个支持 '?' 和 '*' 的通配符匹配。
+'?' 可以匹配任何单个字符。
+'*' 可以**匹配任意字符串（包括空字符串）**。
+两个字符串完全匹配才算匹配成功。
+
+```
+输入:
+s = "aa"
+p = "*"
+输出: true
+解释: '*' 可以匹配任意字符串。
+```
+- 与[LC10.正则表达式]一题相似，但在具体的匹配规则上有差异：
+    - 本题，使用`*`可以匹配任意字符串，匹配范围更广：
+- `dp[i][j]` 表示s串的前i个字符和p串前j个字符匹配：
+  - `s[i-1] == p[j-1] | p[j-1] == '?` 当前位置上字符匹配：
+    - `dp[i][j] = dp[i-1][j-1]`
+  - 如果当前位置上字符串不直接匹配的话，需要考虑`*`的功效：
+    - `dp[i][j] = dp[i-1][j] | dp[i][j-1]` 若 `p[j-1] == '*'`
+      - 即使用当前*进行匹配(`dp[i-1][j]`)与不使用`*`匹配(匹配空字符串 `dp[i][j-1]`)
+
+```c++
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        int  n = s.size();
+        int  m = p.size();
+        vector<vector<int>> dp(n + 1, vector<int> (m + 1));
+        // init 初始化设置
+        dp[0][0] = 1;
+        for (int i = 1; i <= m; i++) {
+            if (p[i-1] == '*') {
+                dp[0][i] = dp[0][i-1];
+            }
+        }
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (s[i-1] == p[j-1] || p[j-1] == '?') {
+                    dp[i][j] = dp[i-1][j-1];
+                }
+                else if (p[j-1] == '*') {
+                     
+                    dp[i][j] = dp[i-1][j] || dp[i][j-1] || dp[i-1][j-1];
+                }
+            }
+        }
+         
+        return dp[n][m];
+    }
+};
+```
 ### 55. 跳跃游戏 [Medium]
 - **判断是否可达**
   - 可以通过**贪心的思路**进行处理
