--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -41,6 +41,7 @@
   - [322. 零钱兑换 [Medium]](#322-零钱兑换-medium)
   - [518. 零钱兑换 II](#518-零钱兑换-ii)
   - [300. 最长上升子序列 (LIS)](#300-最长上升子序列-lis)
+  - [673. 最长递增子序列的个数](#673-最长递增子序列的个数)
   - [354. 俄罗斯套娃信封](#354-俄罗斯套娃信封)
   - [221. 最大正方形](#221-最大正方形)
   - [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
@@ -55,6 +56,7 @@
   - [887. 鸡蛋掉落 [面试**]](#887-鸡蛋掉落-面试)
   - [1235. 规划兼职工作 [Huawei]](#1235-规划兼职工作-huawei)
   - [5815. 扣分后的最大得分](#5815-扣分后的最大得分)
+  - [剑指 Offer 60. n个骰子的点数](#剑指-offer-60-n个骰子的点数)
 
 ## 基础问题
 ### 0-1背包问题
@@ -1684,6 +1686,44 @@ public:
     }
 };
 ```
+### 673. 最长递增子序列的个数
+> 给定一个未排序的整数数组，找到最长递增子序列的个数。
+- 与[LC300.最长递增子序列]做法一致，需要增加额外的统计数组
+  - 用于记录当前位置最长子序列的个数
+  - 更新规则如下：
+  - `dp[i] < dp[j] + 1` 则 `cnt[i] = cnt[j]`
+```c++
+class Solution {
+public:
+    int findNumberOfLIS(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> dp(n, 1);
+        vector<int> cnt(n, 1);
+        int ans = 1;
+        for (int i = 0; i < n; i ++) {
+            for (int j = 0; j < i; j++) {
+                if (nums[j] < nums[i]) {
+                    if (dp[i] < dp[j] + 1) {
+                        dp[i] = dp[j] + 1;
+                        cnt[i] = cnt[j];  // 注意保存结果
+                    }
+                    else if (dp[i] == dp[j] + 1){
+                        cnt[i] += cnt[j];
+                    }
+                }
+            }
+            ans = max(ans, dp[i]);
+        }
+        int res = 0;
+        for (int i = 0; i < n; i++) {
+            if (dp[i] == ans) {
+                res += cnt[i];
+            }
+        }
+        return res;
+    }
+};
+```
 
 ### 354. 俄罗斯套娃信封
 > 给你一个二维整数数组 envelopes ，其中 envelopes[i] = [wi, hi] ，表示第 i 个信封的宽度和高度。
@@ -2445,6 +2485,39 @@ public:
             }
         }
         return ans;
+    }
+};
+```
+
+### 剑指 Offer 60. n个骰子的点数
+> 把n个骰子扔在地上，所有骰子朝上一面的点数之和为s。输入n，打印出s的所有可能的值出现的概率。
+
+ 
+- 即考虑n个骰子的点数和分布情况。
+  - 暴力解法：统计所有可能的分布，并记录出现的次数
+- n个骰子的投掷结果有`6^n`个，**但取值范围为`n ~ 6*n`, 共有`5n + 1`个取值**
+  - 定义`dp[i][x]`: 表示 i个骰子构成和为x的概率
+![avatar](offer-60.png)
+![avatar](offer-60-2.png)
+- 采用**滚动数组**的方式实现，每次调整dp数组的长度。
+  - `tmp[k+j] = dp[k] / 6.;`
+```c++
+class Solution {
+public:
+    // `sum_{1}^n
+    // dp[i] = [1/n] i个骰子的分布结果
+    vector<double> dicesProbability(int n) {
+        vector<double> dp (6, 1/6.);
+        for (int i = 2; i <= n; i++) {
+            vector<double> tmp(5 * i + 1); // 2个： 5 * 2 + 1 
+            for (int k = 0; k < dp.size(); k++) {
+                for (int j = 0; j < 6; j++) {
+                    tmp[k + j] += dp[k] / 6.;
+                }
+            }
+            dp = tmp;
+        }
+        return dp;
     }
 };
 ```
