--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -358,8 +358,8 @@ public:
 > 给你一个长度为 n 的链表，每个节点包含一个额外增加的随机指针 random ，该指针可以指向链表中的任何节点或空节点. 进行深拷贝，重新构建一个链表
 
 - 由于random指针指向，单次遍历构建比较复杂
-- 可以借助哈希表存储两个链表间的节点映射，在创建完成后再遍历一遍添加random指针连接
-- 关键点： **`哈希表`**
+- **可以借助哈希表存储两个链表间的节点映射**，在创建完成后再遍历一遍添加random指针连接
+- 关键点： **`哈希表 + 链表操作`**
 
 ```c++
 class Solution {
