--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -15,6 +15,7 @@
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
   - [Offer 53 - II. 0～n-1中缺失的数字](#offer-53---ii-0n-1中缺失的数字)
+  - [448. 找到所有数组中消失的数字](#448-找到所有数组中消失的数字)
   - [442. 数组中重复的数据](#442-数组中重复的数据)
   - [60. 排列序列](#60-排列序列)
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
@@ -671,7 +672,37 @@ public:
         return nums.size();
     }
 };
+```
 
+### 448. 找到所有数组中消失的数字
+> 含 n 个整数的数组 nums ，其中 nums[i] 在区间 [1, n] 内。请你找出所有在 [1, n] 范围内但没有出现在 nums 中的数字，并以数组的形式返回结果。
+
+```
+输入：nums = [4,3,2,7,8,2,3,1]
+输出：[5,6]
+```
+- 与前几题套路一致，通过循环交换操作，将数组各个位置上的数进行重新归位
+- 实际复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    vector<int> findDisappearedNumbers(vector<int>& nums) {
+        int n = nums.size();
+        for (int i  = 0; i < n; i++) {
+            while (nums[i] != nums[nums[i] - 1]) {
+                swap(nums[i], nums[nums[i] - 1]);
+            }
+        }
+        vector<int> ans;
+        for (int i = 0; i < n; i++) {
+            if (nums[i] != i + 1) {
+                ans.push_back(i + 1);
+            }
+        }
+        return ans;
+    }
+};
 ```
 
 ### 442. [数组中重复的数据](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/)
