--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -19,7 +19,7 @@
   - [442. 数组中重复的数据](#442-数组中重复的数据)
   - [60. 排列序列](#60-排列序列)
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
-  - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
+  - [73. 矩阵置零  [Medium/JD]](#73-矩阵置零--mediumjd)
   - [剑指offer 43. 1~n整数中1出现的次数](#剑指offer-43-1n整数中1出现的次数)
   - [134. 加油站](#134-加油站)
   - [135. 分发糖果 **](#135-分发糖果-)
@@ -824,7 +824,7 @@ public:
 ```
 
 
-### 73. 矩阵置零  [Medium] 
+### 73. 矩阵置零  [Medium/JD] 
 > 给定一个 m x n 的矩阵，如果一个元素为 0 ，则将其所在行和列的所有元素都设为 0 。请使用 原地 算法。
 
 - 简单的遍历即可，**通过标记数组来记录当前行/列是否有0**，如下时间复杂度O(mn) 空间复杂度O(N)
