--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -8,6 +8,7 @@
   - [119. 杨辉三角 II](#119-杨辉三角-ii)
   - [498. 对角线遍历](#498-对角线遍历)
   - [238. 除自身以外数组的乘积](#238-除自身以外数组的乘积)
+  - [1736.  替换隐藏数字得到的最晚时间](#1736--替换隐藏数字得到的最晚时间)
 - [旋转问题](#旋转问题)
     - [48.旋转图像](#48旋转图像)
   - [189. 旋转数组](#189-旋转数组)
@@ -405,6 +406,38 @@ public:
         }
 
         return ans;
+    }
+};
+```
+
+### 1736.  替换隐藏数字得到的最晚时间
+> 字符串 time ，格式为 hh:mm（小时：分钟），其中某几位数字被隐藏（用 ? 表示）。
+有效的时间为 00:00 到 23:59 之间的所有时间，包括 00:00 和 23:59 。
+替换 time 中隐藏的数字，返回你可以得到的最晚有效时间。
+
+- 基于模拟完成即可
+- 进行诸位判断：
+  - 在hour位上的需要满足`0~23`的约束，因此需要进行情况判断，分别设置最优情况
+  - 在minute位上的两个数字直接设为最大值即可 `59`
+
+```c++
+class Solution {
+public:
+    string maximumTime(string time) {
+        int n = time.size();
+        if (time[0] == '?') {
+            time[0] = (time[1] > '3' && time[1] <= '9') ? '1' : '2';
+        }
+        if (time[1] == '?') {
+            time[1] = time[0] == '2' ? '3' : '9';
+        }
+        if (time[3] == '?') {
+            time[3] = '5';
+        }
+        if (time[4] == '?') {
+            time[4] = '9';
+        }
+        return time;
     }
 };
 ```
